Fix cart width on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -170,6 +170,10 @@ nav {
     nav .side-bar {
       width: 100% !important;
     }
+
+    .offcanvas-end {
+      width: 100% !important;
+    }
   }
   
   /* Main section */
